--- a/src/widgets/balanceSection/Plate/Plate.scss
+++ b/src/widgets/balanceSection/Plate/Plate.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  &_drop{
+
+  &_drop {
     width: 50px;
   }
 }
@@ -45,4 +46,43 @@
   margin-top: 2px;
   text-shadow: 0 1px 0 #fff, 0 0 6px #ffe06644;
   user-select: none;
+}
+
+@media (max-width: 700px) {
+  .platedrop {
+    width: 32px;
+    height: 16px;
+    border-width: 2px;
+    font-size: 12px;
+  }
+
+  .platedrop_hovered {
+    width: 40px;
+    height: 18px;
+    border-width: 3px;
+  }
+
+  .plate_posnum {
+    font-size: 12px;
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 500px) {
+  .platedrop {
+    width: 18px;
+    height: 8px;
+    border-width: 1px;
+    font-size: 8px;
+  }
+
+  .platedrop_hovered {
+    width: 24px;
+    height: 10px;
+    border-width: 2px;
+  }
+
+  .plate_posnum {
+    font-size: 8px;
+  }
 }
