--- a/src/widgets/balanceSection/Modal/Modal.scss
+++ b/src/widgets/balanceSection/Modal/Modal.scss
@@ -22,10 +22,14 @@
 }
 
 .modalbtn {
-  margin-top: 10px;
+  margin-top: 70px;
   padding: 10px 32px;
   border-radius: 10px;
   border: none;
+  //  position: fixed;
+  // z-index: 1000;
+  width: 200px;
+  height: 40px;
   background: linear-gradient(90deg, #f7b733, #fc4a1a);
   color: #fff;
   font-weight: bold;
